predicates - search,filter,sort